# worms-game-remake

./: .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  clase  holamundo.cpp  setup.sh  worms_installer.sh
Client/: CMakeLists.txt  HelloWorld.cpp
client/: CMakeLists.txt  Makefile  client.pro  client_connector.cpp  client_connector.h  client_connector.pro  client_connector.ui  client_connector_resources.qrc  client_lobby.cpp  client_lobby.h  client_lobby.ui  client_lobby_feeder.cpp  client_lobby_feeder.h  client_main.cpp  client_resources.qrc  docker-compose.yml  main.cpp  map.yml  model_sender.cpp  model_sender.h  modelo.yml  protocol.cpp  protocol.h  protocol_error.cpp  protocol_error.h  socket.cpp  socket.h  types.h
client/build-client_connector-Desktop_Qt_5_11_0_GCC_64bit-Debug/: Makefile  client_connector  moc_client_connector.cpp  moc_client_lobby.cpp  ui_client_connector.h  ui_client_lobby.h
client/build-client_connector-Desktop_Qt_5_11_0_GCC_64bit-Profile/: Makefile  client_connector  client_connector.debug  ui_client_connector.h
client/client_connector/: client_connector.cpp  client_connector.h  client_connector.pro  client_connector.ui  main.cpp
client/lobby/: CMakeLists.txt  build.sh  run.sh
client/lobby/qtdesigner/: client_resources.qrc
client/lobby/server_mock/: server_mock  server_mock_main.cpp
client/lobby/src/: client_connector.h  client_lobby_feeder.cpp  main.cpp
client/new_lobby/: CMakeLists.txt
client/new_lobby/client_lobby/: client_lobby.cpp  client_lobby.h  client_lobby.pro  clientlobby.ui  main.cpp
client/new_lobby/qtdesigner/: client_lobby.pro.user.3146e26  client_lobby_resources.qrc  clientlobby.ui  clientlobby.ui.autosave
client/new_lobby/server_mock/: CMakeLists.txt  server_mock_main.cpp
client/new_lobby/src/: client_lobby.cpp  client_lobby.h  waiting_match.cpp
client/qtdesigner/: client.pro  client_lobby.pro  client_lobby.ui  client_lobby_resources.qrc  clientlobby.ui  clientlobby.ui.autosave
client/server_mock/: a.out  buid.sh  games.yml  games2.yml  server_mock  server_mock_main.cpp
client/src/: client_code.ps  client_configuration.cpp  client_configuration.h  client_game.cpp  client_game.h  client_lobby.cpp  client_lobby.h  client_lobby_feeder.cpp  client_settings.cpp  client_settings.h  event_receiver.cpp  event_receiver.h  event_sender.cpp  event_sender.h  main.cpp  model_receiver.cpp  model_receiver.h  protected_dynamics.cpp  protected_dynamics.h  protocol.cpp  thread.h  waiting_match.cpp  waiting_match.h
client/src/ui/: DEPRECATED_main.cpp  WindowGame.h  air_strike.cpp  air_strike.h  banana.cpp  banana.h  bazooka.cpp  bazooka.h  camera.cpp  camera.h  clock.cpp  clock.h  cluster.cpp  cluster.h  dynamite.cpp  dynamite.h  explosion.cpp  explosion.h  flash_notice.cpp  flash_notice.h  font.cpp  font.h  girder.cpp  girder.h  girder_long.cpp  girder_long.h  girder_short.cpp  girder_short.h  green_grenade.cpp  green_grenade.h  holy_grenade.cpp  holy_grenade.h  inventory.cpp  inventory.h  inventory_editor.cpp  inventory_editor.h  inventory_weapons.cpp  inventory_weapons.h  main.cpp  map_game.h  (+30 more)
editor/: CMakeLists.txt
editor/build-editorlauncher-Desktop_Qt_5_11_0_GCC_64bit-Debug/: Makefile  editorlauncher  moc_editor_launcher.cpp  qrc_resources.cpp  ui_editor_launcher.h
editor/editorlauncher/: CMakeLists.txt  editor.h  editor_launcher.cpp  editor_launcher.h  editor_launcher.ui  editorlauncher.pro  resources.qrc  types.h
editor/editorlauncher/qtdesigner/: resources.qrc
editor/editorlauncher/src/: editor_launcher.cpp  editor_launcher.h  main.cpp
editor/maps/: asd.yml  buenos aires  el_mapa_3  mapa_clave  pepon.yml  prueba_launcher.yml  prueba_launcher2.yml
editor/maps/asd/: asd.yml
editor/maps/el_mapa_1/: el_mapa_1.yml
editor/maps/el_mapa_6/: el_mapa_6.yml
editor/maps/gaby/: gaby.yml
editor/qtdesigner/: editor_launcher.ui  editor_launcher.ui.autosave  editorlauncher.pro  editorlauncher.pro.user.3146e26  resources.qrc
editor/src/: editor.cpp  editor.h  editor_code.ps  editor_launcher.cpp  editor_launcher.h  main.cpp  map_game.cpp  map_game.h  map_state.cpp  map_state.h
server/: CMakeLists.txt  config.yml  docker-compose.yml  map.yml  map2.yml  map_example.yml  server.cfg  snapshot_example.yml  world.yml
server/Grids and Wroms/: CMakeLists.txt
server/Grids and Wroms/src/: Girder.cpp  Girder.h  Worm.cpp
server/lobby/: CMakeLists.txt
server/lobby/src/: client.cpp  client.h  lobby_attendant.cpp  lobby_attendant.h  main.cpp  protected_matchs_status.cpp  server.cpp  server.h  (+6 more)
server/maps/: 30.yml  asd.yml  el_mapa_1.yml  el_mapa_5.yml  map2.yml  mapa_1.yml  mapa_2_2.yml  mapa_editor_integrado.yml  nuevo_formato.yml  primer_mapa_hecho_con_editor_sin_validar.yml  primer_mapa_validado.yml  test.yml  testGirders.yml  testWormsId.yml  testWormsId2.yml  test_ft_gonza.yml  test_girder_rotation.yml  vigas_circulo.yml
server/src/: Configuration.cpp  Configuration.h  SnapshotPusher.cpp  SnapshotPusher.h  SnapshotSender.cpp  SnapshotSender.h  Worm.cpp  Worm.h  client.cpp  client.h  client_handler.cpp  client_handler.h  event_receiver.cpp  event_receiver.h  lobby_attendant.cpp  main.cpp  match.cpp  match.h  protected_matchs_status.cpp  protected_waiting_games.cpp  protected_waiting_games.h  server.cpp  server.h  server_acceptor.cpp  server_acceptor.h  server_code.ps  server_error.cpp  server_error.h  server_game.cpp  server_game.h  server_lobby_feeder.cpp  server_lobby_feeder.h  server_protected_clients.cpp  server_protected_clients.h  snapshot.cpp  snapshot.h  snapshot_sender.cpp  snapshot_sender.h  socket.h  socket_error.cpp  (+7 more)
server/test/: CMakeCache.txt  CMakeLists.txt  Makefile  WorldTest.h  cmake_install.cmake  runner  runner.cpp  world.yml
test_cases/sdl_test_key_handle/: CMakeLists.txt  main.cpp
test_cases/test_sdl/: CMakeLists.txt  drawable.h  girder.cpp  girder.h  girder_long.cpp  girder_long.h  girder_short.cpp  girder_short.h  main.cpp  map_game.cpp  modelo.yml  sprite_animation.cpp  sprite_animation.h  texture.cpp  texture.h  thread.h  view_exceptions_messages.h  worm.cpp  worm.h
(+143 files in other folders)
